--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
+	"prisma": {
+		"seed": "node prisma/seed.js"
+	},
 	"devDependencies": {
+		"@faker-js/faker": "^7.6.0",
 		"@sveltejs/adapter-node": "^1.1.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@types/node": "^18.11.18",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.20",
 		"prisma": "^4.8.1",
+		"slugify": "^1.6.5",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"tailwindcss": "^3.2.4",
