--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
 		"@faker-js/faker": "^7.6.0",
 		"@sveltejs/adapter-node": "^1.1.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/bcrypt": "^5.0.0",
 		"@types/node": "^18.11.18",
 		"autoprefixer": "^10.4.13",
+		"bcrypt": "^5.1.0",
 		"postcss": "^8.4.20",
 		"prisma": "^4.8.1",
 		"slugify": "^1.6.5",
