--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
 		"@faker-js/faker": "^7.6.0",
 		"@sveltejs/adapter-auto": "^1.0.1",
 		"@sveltejs/kit": "^1.0.0",
+		"@tailwindcss/typography": "^0.5.9",
 		"@types/bcrypt": "^5.0.0",
+		"@types/markdown-it": "^12.2.3",
 		"@types/node": "^18.11.18",
 		"autoprefixer": "^10.4.13",
 		"bcrypt": "^5.1.0",
+		"markdown-it": "^13.0.1",
 		"postcss": "^8.4.20",
 		"prisma": "^4.8.1",
 		"slugify": "^1.6.5",
