use marked for markdown syntax

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/bcrypt": "^5.0.0",
 		"@types/markdown-it": "^12.2.3",
+		"@types/marked": "^4.0.8",
 		"@types/node": "^18.11.18",
 		"autoprefixer": "^10.4.13",
 		"bcrypt": "^5.1.0",
-		"markdown-it": "^13.0.1",
+		"marked": "^4.2.12",
 		"postcss": "^8.4.20",
 		"prisma": "^4.8.1",
 		"slugify": "^1.6.5",
