--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/node": "^18.11.18",
 		"autoprefixer": "^10.4.13",
 		"bcrypt": "^5.1.0",
+		"daisyui": "^2.50.0",
 		"marked": "^4.2.12",
 		"postcss": "^8.4.20",
 		"prisma": "^4.8.1",
