added theme switcher

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
 		"@types/node": "^20.1.7",
 		"autoprefixer": "^10.4.13",
 		"bcrypt": "^5.1.0",
-		"daisyui": "^2.50.0",
+		"daisyui": "^2.51.6",
 		"marked": "^5.0.2",
+		"marked-gfm-heading-id": "^3.0.3",
+		"marked-mangle": "^1.0.1",
 		"postcss": "^8.4.20",
 		"prisma": "^4.8.1",
 		"slugify": "^1.6.5",
