--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"prisma": {
-		"seed": "node prisma/seed.js"
+		"seed": "tsx prisma/seed.ts"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8.0.1",
@@ -20,11 +20,11 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/bcrypt": "^5.0.0",
 		"@types/marked": "^5.0.0",
-		"@types/node": "^20.1.7",
+		"@types/node": "^20.6.0",
 		"autoprefixer": "^10.4.13",
 		"bcrypt": "^5.1.0",
 		"daisyui": "^3.1.6",
-		"marked": "^8.0.0",
+		"marked": "^9.0.0",
 		"postcss": "^8.4.20",
 		"prisma": "^5.0.0",
 		"slugify": "^1.6.5",
@@ -33,7 +33,8 @@
 		"tailwindcss": "^3.3.2",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.4",
+		"tsx": "^3.12.10",
+		"typescript": "^5.2.2",
 		"vite": "^4.0.0"
 	},
 	"type": "module",
