--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8.0.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/bcrypt": "^5.0.0",
 		"@types/marked": "^6.0.0",
@@ -35,7 +36,7 @@
 		"tslib": "^2.4.1",
 		"tsx": "^4.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.0.0"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
