added font awesome

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^5.0.0"
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@prisma/client": "^5.0.0",
+		"svelte-fa": "^4.0.2"
 	}
 }
