--- a/package.json
+++ b/package.json
@@ -11,31 +11,26 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"prisma": {
-		"seed": "tsx prisma/seed.ts"
+		"seed": "node prisma/seed.js"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8.0.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-node": "^5.0.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/bcrypt": "^5.0.0",
-		"@types/marked": "^6.0.0",
-		"@types/node": "^20.6.0",
 		"autoprefixer": "^10.4.13",
 		"bcrypt": "^5.1.0",
 		"daisyui": "^4.4.18",
-		"marked": "^12.0.2",
+		"marked": "^14.0.0",
 		"postcss": "^8.4.20",
 		"prisma": "^5.0.0",
 		"slugify": "^1.6.5",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.0.2",
 		"tailwindcss": "^3.3.2",
-		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
-		"tsx": "^4.6.2",
 		"typescript": "^5.2.2",
 		"vite": "^5.0.0"
 	},
