--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^9.0.3",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.8",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.9",
-		"@types/bcrypt": "^5.0.0",
 		"autoprefixer": "^10.4.13",
-		"bcrypt": "^5.1.0",
 		"daisyui": "^4.4.18",
 		"marked": "^14.0.0",
 		"postcss": "^8.4.20",
