--- a/package.json
+++ b/package.json
@@ -19,16 +19,15 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/node": "^22.8.4",
 		"autoprefixer": "^10.4.13",
 		"daisyui": "^4.4.18",
 		"marked": "^14.0.0",
-		"postcss": "^8.4.20",
 		"prisma": "^5.0.0",
 		"slugify": "^1.6.5",
 		"svelte": "^4.0.0",
 		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.3.2",
-		"tslib": "^2.4.1",
 		"typescript": "^5.2.2",
 		"vite": "^5.0.0"
 	},
