--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/postcss": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.9",
+		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22.8.4",
-		"autoprefixer": "^10.4.13",
 		"marked": "^15.0.2",
 		"prisma": "^6.1.0",
 		"slugify": "^1.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.5",
-		"tailwindcss": "^3.3.2",
+		"tailwindcss": "^4.0.0",
 		"typescript": "^5.2.2",
 		"vite": "^6.0.5"
 	},
