--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^9.0.3",
+		"@lucide/svelte": "^0.534.0",
 		"@sveltejs/adapter-node": "^5.2.8",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.9",
 		"@tailwindcss/vite": "^4.0.0",
@@ -30,10 +31,9 @@
 		"svelte-check": "^4.0.5",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.2.2",
-		"vite": "^6.0.5"
+		"vite": "^7.0.0"
 	},
 	"dependencies": {
-		"@prisma/client": "^6.1.0",
-		"lucide-svelte": "^0.476.0"
+		"@prisma/client": "^6.1.0"
 	}
 }
